background color change

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -303,7 +303,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   padding: 0 0 0 0;
-  background: #213b52;
+  background: #090347;
   background: linear-gradient(180deg, #213b52 0%, #213c54 35%, #204564 100%);
 }
 #hero h1 {
