--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,7 @@ h1, h2, h3, h4, h5, h6 {
   z-index: 997;
   transition: all 0.5s;
   padding: 16px 0;
-  background: #213b52;
+  background: #090347;
 }
 #header .logo h1 {
   font-size: 24px;
