--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,7 +135,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
 }
 .navbar .getstarted, .navbar .getstarted:focus {
-  background: #213b52;
+  background: #090347;
   color: #fff;
   padding: 4px 25px 6px 25px;
   margin-left: 30px;
