--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -487,7 +487,7 @@ section {
 .about .content h3 {
   font-weight: 700;
   font-size: 34px;
-  color: #213b52;
+  color: #090347;
 }
 .about .content p {
   margin-bottom: 0;
