--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -568,7 +568,7 @@ section {
   margin-bottom: 20px;
 }
 .services .card-title a {
-  color: #213b52;
+  color: #090347;
   transition: 0.3s;
 }
 .services .card-text {
