--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -603,7 +603,7 @@ section {
 .features .content h3 {
   font-weight: 700;
   font-size: 26px;
-  color: #213b52;
+  color: #090347;
 }
 .features .content ul {
   list-style: none;
