--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -948,7 +948,7 @@ section {
   border-bottom: 1px solid #dde8f1;
 }
 .faq .faq-item i {
-  color: #9bbbd7;
+  color: #090347;
   font-size: 20px;
   float: left;
   line-height: 0;
@@ -1094,7 +1094,7 @@ section {
   right: 0;
   top: 0;
   bottom: 0;
-  background: rgba(26, 46, 64, 0.85);
+  background: #090347;
   z-index: 1;
 }
 #footer .footer-top {
