--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1196,7 +1196,7 @@ section {
   #footer .copyright, #footer .credits {
     padding: 5px;
     float: none;
-    text-align: ceneter;
+    text-align: center;
   }
 }
 
