--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1082,7 +1082,7 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: url("../img/footer-bg.jpg") center center no-repeat;
+  background: url("") center center no-repeat;
   color: #fff;
   font-size: 14px;
   position: relative;
